# prspex

./: README.md  keep_alive.py  main.py  pyproject.toml  variables.py
bot/: update.txt
cogs/: api.py  fun.py  help.py  listeners.py  moderation.py  setting.py  util.py
json/settings/: server.json
